[gd_scene load_steps=10 format=3 uid="uid://bkvc20g8d8qdq"]

[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/MenuPrincipal.gd" id="1_sxf7w"]
[ext_resource type="Texture2D" uid="uid://cxbakr4vfxhbk" path="res://Assets/Sprites/FondoMenu.png" id="2_wittu"]
[ext_resource type="FontFile" uid="uid://ihk4kdacjiuj" path="res://Fonts/Kenney Blocks.ttf" id="3_rlgse"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/Bu_PLAY.gd" id="4_igupd"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/Bu_OPTIONS.gd" id="5_0mv6m"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/BU_CATALAN.gd" id="6_vwcjo"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/BU_ENGLISH.gd" id="7_0jj01"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuPrincipal/Scripts/Bu_EXIT.gd" id="8_qv7fk"]
[ext_resource type="AudioStream" uid="uid://bo61mjl42advo" path="res://Assets/Sounds/Tuneles.mp3" id="9_ugg7b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxf7w")

[node name="FondoMenu" type="Sprite2D" parent="."]
position = Vector2(599, 289)
scale = Vector2(2.2875, 2.22176)
texture = ExtResource("2_wittu")

[node name="BU_PLAY" type="Button" parent="."]
layout_mode = 0
offset_left = 671.0
offset_top = 21.0
offset_right = 995.0
offset_bottom = 160.0
theme_override_colors/font_hover_color = Color(0.972549, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rlgse")
theme_override_font_sizes/font_size = 50
script = ExtResource("4_igupd")

[node name="BU_OPTIONS" type="Button" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 201.0
offset_right = 1072.0
offset_bottom = 315.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rlgse")
theme_override_font_sizes/font_size = 50
script = ExtResource("5_0mv6m")

[node name="BU_CATALAN" type="Button" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 336.0
offset_right = 784.0
offset_bottom = 462.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rlgse")
theme_override_font_sizes/font_size = 50
script = ExtResource("6_vwcjo")

[node name="BU_ENGLISH" type="Button" parent="."]
layout_mode = 0
offset_left = 836.0
offset_top = 333.0
offset_right = 1144.0
offset_bottom = 457.0
theme_override_fonts/font = ExtResource("3_rlgse")
theme_override_font_sizes/font_size = 50
script = ExtResource("7_0jj01")

[node name="BU_EXIT" type="Button" parent="."]
layout_mode = 0
offset_left = 725.0
offset_top = 484.0
offset_right = 1037.0
offset_bottom = 601.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rlgse")
theme_override_font_sizes/font_size = 50
text = "
"
script = ExtResource("8_qv7fk")

[node name="MusicaMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ugg7b")

[connection signal="pressed" from="BU_PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BU_OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="BU_CATALAN" to="." method="_on_language_pressed"]
[connection signal="pressed" from="BU_CATALAN" to="." method="_on_bu_catalan_pressed"]
[connection signal="pressed" from="BU_ENGLISH" to="." method="_on_bu_english_pressed"]
[connection signal="pressed" from="BU_EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="BU_EXIT" to="." method="_on_bu_exit_pressed"]
